--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2021"
 members = [
   "day_1",
   "day_2",
-
+  "day_3",
   "day_4",
   "day_5",
   "day_6",
   "day_7",
+  "day_8",
   "utils"
 ]
